--- a/src/27-gpa-info.html
+++ b/src/27-gpa-info.html
@@ -166,31 +166,33 @@
                             <div class="white-box contain-wrapper-sm mb-4 mt-4">
                                 <div class="mb-4">
                                     <label class="checkbox-inline w-auto me-3 mb-0" for="none">
-                                        <input class="checkbox-control" type="checkbox" value="" id="none" checked>
+                                        <input class="checkbox-control main" type="checkbox" value="" id="none" checked>
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label">None</span>
                                     </label>
                                 </div>
-                                <div class="mb-4">
-                                    <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
-                                        <input class="checkbox-control" type="checkbox" value="" id="Corina">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">Corina McCoy</span>
-                                    </label>
-                                </div>
-                                <div class="mb-4">
-                                    <label class="checkbox-inline w-auto me-3 mb-0" for="Patricia">
-                                        <input class="checkbox-control" type="checkbox" value="" id="Patricia">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">Patricia Sanders</span>
-                                    </label>
-                                </div>
-                                <div>
-                                    <label class="checkbox-inline w-auto me-3 mb-0" for="Rodger">
-                                        <input class="checkbox-control" type="checkbox" value="" id="Rodger">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">Rodger Struck</span>
-                                    </label>
+                                <div class="bottomoption menuitemshow">
+                                    <div class="mb-4">
+                                        <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Corina">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label">Corina McCoy</span>
+                                        </label>
+                                    </div>
+                                    <div class="mb-4">
+                                        <label class="checkbox-inline w-auto me-3 mb-0" for="Patricia">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Patricia">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label">Patricia Sanders</span>
+                                        </label>
+                                    </div>
+                                    <div>
+                                        <label class="checkbox-inline w-auto me-3 mb-0" for="Rodger">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Rodger">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label">Rodger Struck</span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary mx-auto"><span>Continue</span></button>
@@ -209,7 +211,15 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
-
+    <script>
+        $('input.main:checkbox').change(function () {
+            if ($(this).is(":checked")) {
+                $('div.bottomoption').addClass("menuitemshow");
+            } else {
+                $('div.bottomoption').removeClass("menuitemshow");
+            }
+        });
+    </script>
 </body>
 
 </html>
