--- a/src/client-profile/client-profile-Notes-1.html
+++ b/src/client-profile/client-profile-Notes-1.html
@@ -7,20 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New England Insurance Policy</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./images/favicon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="./../images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./../images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./../images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./../images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./../images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./../images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./../images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./../images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./../images/favicon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../images/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./../images/favicon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../images/favicon//favicon-16x16.png">
+    <link rel="manifest" href="../manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -38,8 +38,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" href="../images/favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
 <body>
@@ -53,10 +53,10 @@
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="../images/logo.svg" alt=""></a>
 
                     </div>
-                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="../images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -96,8 +96,8 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
-                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
+                        <img src="../images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="../images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
@@ -110,14 +110,14 @@
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item ">
                                     <a class="nav-link active text-left" aria-current="page" href="#"> <img
-                                            src="./images/message-question-blue.svg" alt=""
+                                            src="../images/message-question-blue.svg" alt=""
                                             class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
                                         Help
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link  text-left" href="#">
-                                        <img src="./images/user-blue.svg" alt=""
+                                        <img src="../images/user-blue.svg" alt=""
                                             class="nav-icon d-inline-block  nav-icon-mob">
                                         User</a>
                                 </li>
@@ -134,23 +134,23 @@
                         <div class="user-card">
                             <div class="user-details">
                                 <div class="user-img">
-                                    <img src="images/user-circle.svg">
+                                    <img src="../images/user-circle.svg">
                                     <span class="tag silver">silver</span>
                                 </div>
                                 <div class="user-data">
                                     <h2 class="user-name">Alex Buckmaster</h2>
                                     <div class="share-links">
                                         <a class="refer-link" href="">
-                                            <img src="images/mail-bold.svg">
+                                            <img src="../images/mail-bold.svg">
                                         </a>
                                         <a class="refer-link" href="">
-                                            <img src="images/phone.svg">
+                                            <img src="../images/phone.svg">
                                         </a>
                                         <a class="refer-link" href="">
-                                            <img src="images/whatsapp-bold.svg">
+                                            <img src="../images/whatsapp-bold.svg">
                                         </a>
                                         <a class="refer-link" href="">
-                                            <img src="images/message-bold.svg">
+                                            <img src="../images/message-bold.svg">
                                         </a>
 
                                     </div>
@@ -162,26 +162,26 @@
 
                             <div>
                                 <button class="d-block d-lg-none">
-                                    <img src="images/edit-2-black.svg" alt="">
+                                    <img src="../images/edit-2-black.svg" alt="">
                                 </button>
                             </div>
                             <div class="user-options">
                                 <ul class="option-lists">
                                     <li class="option-item">
                                         <a href="">
-                                            <img src="images/edit-2.svg" />
+                                            <img src="../images/edit-2.svg" />
                                             <span>Edit</span>
                                         </a>
                                     </li>
                                     <li class="option-item">
                                         <a href="">
-                                            <img src="images/doc-blue.svg" />
+                                            <img src="../images/doc-blue.svg" />
                                             <span>Notes</span>
                                         </a>
                                     </li>
                                     <li class="option-item">
                                         <a href="">
-                                            <img src="images/global.svg" />
+                                            <img src="../images/global.svg" />
                                             <span>
                                                 <span class="link-label">Language</span>
                                                 <span>Spanish</span>
@@ -190,7 +190,7 @@
                                     </li>
                                     <li class="option-item">
                                         <a href="">
-                                            <img src="images/contact-support.svg" />
+                                            <img src="../images/contact-support.svg" />
                                             <span>
                                                 <span class="link-label">Contact Preference</span>
                                                 <span>Email</span>
@@ -200,7 +200,7 @@
                                 </ul>
                                 <div class="rewards-balance">
                                     <p>Your Rewards Balance : <span class="reward-highlight">526 points</span><a
-                                            href=""><img src="images/info-green.svg"></a></p>
+                                            href=""><img src="../images/info-green.svg"></a></p>
                                 </div>
                             </div>
 
@@ -208,7 +208,7 @@
 
                         <div class="serach-box">
                             <div class="input-group search">
-                                <img class="" src="images/search.svg">
+                                <img class="" src="../images/search.svg">
                                 <input class="form-control" type="search"
                                     placeholder="Search Notes" />
                             </div>
@@ -308,13 +308,13 @@
                                         </div>
                                         <div class="notes-option">
                                             <a href="">
-                                                <img src="images/conversation.svg" alt="">
+                                                <img src="../images/conversation.svg" alt="">
                                             </a>
                                             <a href="">
-                                                <img src="images/edit-2.svg">
+                                                <img src="../images/edit-2.svg">
                                             </a>
                                             <a href="">
-                                                <img src="images/delete.svg">
+                                                <img src="../images/delete.svg">
                                             </a>
                                         </div>
                                     </div>
@@ -329,13 +329,13 @@
                                         <li class="comment">
                                             <div class="comment-head">
                                                 <div class="user-img">
-                                                    <img src="images/user-img.png">
+                                                    <img src="../images/user-img.png">
                                                 </div>
                                                 <div class="user-name">Bradley Lawlor</div>
                                                 <div class="comment-time">Jun 5, 2023 1:28 am</div>
 
                                                 <div class="comment-otions">
-                                                    <img src="images/more.svg">
+                                                    <img src="../images/more.svg">
                                                 </div>
                                             </div>
                                             <div class="comment-details">
@@ -347,13 +347,13 @@
                                         <li class="comment">
                                             <div class="comment-head">
                                                 <div class="user-img">
-                                                    <img src="images/user-img.png">
+                                                    <img src="../images/user-img.png">
                                                 </div>
                                                 <div class="user-name">Bradley Lawlor</div>
                                                 <div class="comment-time">Jun 5, 2023 1:28 am</div>
 
                                                 <div class="comment-otions">
-                                                    <img src="images/more.svg">
+                                                    <img src="../images/more.svg">
                                                 </div>
                                             </div>
                                             <div class="comment-details">
@@ -365,13 +365,13 @@
                                         <li class="comment">
                                             <div class="comment-head">
                                                 <div class="user-img">
-                                                    <img src="images/user-img.png">
+                                                    <img src="../images/user-img.png">
                                                 </div>
                                                 <div class="user-name">Bradley Lawlor</div>
                                                 <div class="comment-time">Jun 5, 2023 1:28 am</div>
 
                                                 <div class="comment-otions">
-                                                    <img src="images/more.svg">
+                                                    <img src="../images/more.svg">
                                                 </div>
                                             </div>
                                             <div class="comment-details">
@@ -457,7 +457,7 @@
 
     </main>
 
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
@@ -465,7 +465,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
         </script>
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 
 
 </body>
