--- a/src/client-profile/client-profile-RTA-history.html
+++ b/src/client-profile/client-profile-RTA-history.html
@@ -7,20 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New England Insurance Policy</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./images/favicon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="./../images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./../images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./../images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./../images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./../images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./../images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./../images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./../images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./../images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./../images/favicon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./../images/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./../images/favicon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./../images/favicon//favicon-16x16.png">
+    <link rel="manifest" href="../manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -38,8 +38,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" href="../images/favicon.png" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
 <body>
@@ -53,10 +53,10 @@
                             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand d-none d-md-block" href="#"><img src="./images/logo.svg" alt=""></a>
+                        <a class="navbar-brand d-none d-md-block" href="#"><img src="../images/logo.svg" alt=""></a>
 
                     </div>
-                    <a class="navbar-brand d-md-none m-0" href="#"><img src="./images/logo.svg" alt=""></a>
+                    <a class="navbar-brand d-md-none m-0" href="#"><img src="../images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
                         <!-- <select class="vodiapicker">
                             <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
@@ -96,8 +96,8 @@
                             </select>
                         </div>
 
-                        <img src="./images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
-                        <img src="./images/user.svg" alt="" class="nav-icon d-none d-md-block">
+                        <img src="../images/message-question.svg" alt="" class="me-3 pe-2 nav-icon d-none d-md-block">
+                        <img src="../images/user.svg" alt="" class="nav-icon d-none d-md-block">
                     </div>
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                         aria-labelledby="offcanvasNavbarLabel">
@@ -110,14 +110,14 @@
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item ">
                                     <a class="nav-link active text-left" aria-current="page" href="#"> <img
-                                            src="./images/message-question-blue.svg" alt=""
+                                            src="../images/message-question-blue.svg" alt=""
                                             class="d-inline-block me-3 pe-2 nav-icon nav-icon-mob">
                                         Help
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link  text-left" href="#">
-                                        <img src="./images/user-blue.svg" alt=""
+                                        <img src="../images/user-blue.svg" alt=""
                                             class="nav-icon d-inline-block  nav-icon-mob">
                                         User</a>
                                 </li>
@@ -134,7 +134,7 @@
                         <div class="serach-box">
                             <h2 class="font-bold fs-26 mb-3">RTA History</h2>
                             <div class="input-group search">
-                                <img class="" src="images/search.svg">
+                                <img class="" src="../images/search.svg">
                                 <input class="form-control" type="search" placeholder="Search vehicle" />
                             </div>
                         </div> <!-- /search-box -->
@@ -144,7 +144,7 @@
                                 <span class="font-12 text-gray">Filter by</span>
                                 <a href="" class="filter-date ms-2">
                                     May 10, 2022 - Dec 31, 2022
-                                    <img src="images/dropdown-blue.svg">
+                                    <img src="../images/dropdown-blue.svg">
                                 </a>
                             </div>
                         </div>
@@ -154,15 +154,15 @@
                                     <input class="checkbox-control" type="checkbox" value="" id="3" />
                                     <span class="checkbox-custom"></span>
                                     <span class="checkbox-label fs-14 mb-0">
-                                        <img src="images/doc-blue.svg" alt="">
+                                        <img src="../images/doc-blue.svg" alt="">
                                         Skoda_Octavia_Registration.pdf
                                     </span>
                                 </label>
                                 <a href="" class="ms-auto p-1">
-                                    <img src="images/forward-black.svg" alt="">
+                                    <img src="../images/forward-black.svg" alt="">
                                 </a>
                                 <a href="" class="ms-md-2 p-1">
-                                    <img src="images/download.svg" alt="">
+                                    <img src="../images/download.svg" alt="">
                                 </a>
                             </div>
 
@@ -171,15 +171,15 @@
                                     <input class="checkbox-control" type="checkbox" value="" id="2" />
                                     <span class="checkbox-custom"></span>
                                     <span class="checkbox-label fs-14 mb-0">
-                                        <img src="images/doc-blue.svg" alt="">
+                                        <img src="../images/doc-blue.svg" alt="">
                                         RegistrationSkoda_Octavia_Registration.pdf
                                     </span>
                                 </label>
                                 <a href="" class="action-icon ms-auto p-1">
-                                    <img src="images/forward-black.svg" alt="">
+                                    <img src="../images/forward-black.svg" alt="">
                                 </a>
                                 <a href="" class="action-icon ms-md-2 p-1">
-                                    <img src="images/download.svg" alt="">
+                                    <img src="../images/download.svg" alt="">
                                 </a>
                             </div>
 
@@ -188,15 +188,15 @@
                                     <input class="checkbox-control" type="checkbox" value="" id="1" />
                                     <span class="checkbox-custom"></span>
                                     <span class="checkbox-label fs-14 mb-0">
-                                        <img src="images/doc-blue.svg" alt="">
+                                        <img src="../images/doc-blue.svg" alt="">
                                         Skoda_Octavia_Registration.pdf
                                     </span>
                                 </label>
                                 <a href="" class="ms-auto p-1">
-                                    <img src="images/forward-black.svg" alt="">
+                                    <img src="../images/forward-black.svg" alt="">
                                 </a>
                                 <a href="" class="ms-md-2 p-1">
-                                    <img src="images/download.svg" alt="">
+                                    <img src="../images/download.svg" alt="">
                                 </a>
                             </div>
 
@@ -205,15 +205,15 @@
                                     <input class="checkbox-control" type="checkbox" value="" id="4" />
                                     <span class="checkbox-custom"></span>
                                     <span class="checkbox-label fs-14 mb-0">
-                                        <img src="images/doc-blue.svg" alt="">
+                                        <img src="../images/doc-blue.svg" alt="">
                                         Skoda_Octavia_Registration.pdf
                                     </span>
                                 </label>
                                 <a href="" class="ms-auto p-1">
-                                    <img src="images/forward-black.svg" alt="">
+                                    <img src="../images/forward-black.svg" alt="">
                                 </a>
                                 <a href="" class="ms-md-2 p-1">
-                                    <img src="images/download.svg" alt="">
+                                    <img src="../images/download.svg" alt="">
                                 </a>
                             </div>
 
@@ -288,7 +288,7 @@
 
     </main>
 
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
@@ -296,7 +296,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
         </script>
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
 
 
 </body>
